--- a/po/de.po
+++ b/po/de.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: gPodder\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-12-29 14:35+0100\n"
-"PO-Revision-Date: 2018-12-22 17:48+0100\n"
+"PO-Revision-Date: 2018-12-29 21:36+0100\n"
 "Last-Translator: TZocker\n"
 "Language-Team: German (http://www.transifex.com/projects/p/gpodder/language/"
 "de/)\n"
@@ -227,7 +227,7 @@ msgstr "Standard"
 
 #: src/gpodder/model.py:651
 msgid "Only keep latest"
-msgstr "Nur Neueste behalten"
+msgstr "Nur aktuellste behalten"
 
 #: src/gpodder/model.py:685 src/gpodder/model.py:1109
 #: src/gpodder/extensions.py:59
@@ -370,7 +370,7 @@ msgstr "Oberfläche"
 
 #: src/gpodder/extensions.py:57
 msgid "Post download"
-msgstr "Nach Downloads"
+msgstr "Nach dem Download"
 
 #: src/gpodder/extensions.py:100
 msgid "No description for this extension."
@@ -500,7 +500,7 @@ msgstr "Keine Abonnements"
 
 #: src/gpodder/gtkui/main.py:1085
 msgid "No active tasks"
-msgstr "Keine aktiven Tasks"
+msgstr "Keine aktiven Aufgaben"
 
 #: src/gpodder/gtkui/main.py:1198 src/gpodder/gtkui/main.py:1200
 #, python-format
@@ -626,11 +626,11 @@ msgstr "Podcast aktualisieren"
 
 #: src/gpodder/gtkui/main.py:1706
 msgid "Open download folder"
-msgstr "Download-Ordner öffnen"
+msgstr "Downloadordner öffnen"
 
 #: src/gpodder/gtkui/main.py:1712
 msgid "Mark episodes as old"
-msgstr "Episoden als \"Alt\" markieren"
+msgstr "Episoden als \"gespielt\" markieren"
 
 #: src/gpodder/gtkui/main.py:1716 src/gpodder/gtkui/main.py:1973
 msgid "Archive"
@@ -853,7 +853,7 @@ msgstr "Neue Episoden verfügbar"
 #, python-format
 msgid "%(count)d new episode added to download list."
 msgid_plural "%(count)d new episodes added to download list."
-msgstr[0] "%(count)d neue Episode zur Download-Liste hinzugefügt."
+msgstr[0] "%(count)d neue Episode zur Downloadliste hinzugefügt."
 msgstr[1] "%(count)d neue Episoden zur Download-Liste hinzugefügt."
 
 #: src/gpodder/gtkui/main.py:2703
@@ -946,7 +946,7 @@ msgstr "Fehler beim Herunterladen von %(episode)s: %(message)s"
 
 #: src/gpodder/gtkui/main.py:2997
 msgid "Download error"
-msgstr "Download-Fehler"
+msgstr "Downloadfehler"
 
 #: src/gpodder/gtkui/main.py:3048
 msgid "Select the episodes you want to download:"
@@ -1389,7 +1389,7 @@ msgstr "Liste mit Episoden anzeigen"
 
 #: src/gpodder/gtkui/desktop/preferences.py:48
 msgid "Add to download list"
-msgstr "Zur Download-Liste hinzufügen"
+msgstr "Zur Downloadliste hinzufügen"
 
 #: src/gpodder/gtkui/desktop/preferences.py:49
 msgid "Download immediately"
@@ -1397,7 +1397,7 @@ msgstr "Sofort herunterladen"
 
 #: src/gpodder/gtkui/desktop/preferences.py:68
 msgid "None"
-msgstr "Keine"
+msgstr "Keines"
 
 #: src/gpodder/gtkui/desktop/preferences.py:69
 msgid "iPod"
@@ -1676,7 +1676,7 @@ msgstr "Kopiert das Cover zum Rockbox Mediaplayer"
 
 #: share/gpodder/extensions/taskbar_progress.py:35
 msgid "Show download progress on the taskbar"
-msgstr "Download-Fortschritt in der Taskbar anzeigen"
+msgstr "Download Fortschritte in der Taskleiste anzeigen"
 
 #: share/gpodder/extensions/taskbar_progress.py:36
 msgid "Displays the progress on the Windows taskbar."
@@ -1969,7 +1969,7 @@ msgstr "Podcasts"
 
 #: share/gpodder/ui/gtk/gpodder.ui.h:8
 msgid "Limit rate to"
-msgstr "Rate limitieren auf"
+msgstr "Download begrenzen auf"
 
 #: share/gpodder/ui/gtk/gpodder.ui.h:9
 msgid "KiB/s"
@@ -1977,7 +1977,7 @@ msgstr "KiB/s"
 
 #: share/gpodder/ui/gtk/gpodder.ui.h:10
 msgid "Limit downloads to"
-msgstr "Downloads limitieren auf"
+msgstr "Anzahl der gleichzeitigen Downloads"
 
 #: share/gpodder/ui/gtk/gpodderepisodeselector.ui.h:1
 msgid "Select episodes"
@@ -2125,11 +2125,11 @@ msgstr "YouTube-API-Key (v3):"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:9
 msgid "Preferred Vimeo format:"
-msgstr "Bevorzugtes Vimeo-Format:"
+msgstr "Bevorzugtes Video-Format:"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:12
 msgid "Synchronize subscriptions and episode actions"
-msgstr "Abonnements und Aktionen synchronisieren"
+msgstr "Synchronisiert Abonnements und Episodenaktionen"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:13
 msgid "Server:"
@@ -2137,11 +2137,11 @@ msgstr "Server:"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:16
 msgid "Replace list on server with local subscriptions"
-msgstr "Liste am Server mit lokalen Abonnements ersetzen"
+msgstr "Ersetz die Liste auf dem Server durch lokale Abonnements"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:17
 msgid "Device name:"
-msgstr "Gerät-Name:"
+msgstr "Gerätename:"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:18
 msgid "gpodder.net"
@@ -2169,7 +2169,7 @@ msgstr "Gespielte Episoden löschen:"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:24
 msgid "Remove played episodes even if unfinished"
-msgstr "Abgespielte Episoden löschen (auch wenn nicht fertig)"
+msgstr "Abgespielte Episoden löschen (auch wenn nicht beendet)"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:25
 msgid "Also remove unplayed episodes"
@@ -2193,7 +2193,7 @@ msgstr "Nach dem Synchronisieren einer Episode:"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:30
 msgid "Create playlists on device"
-msgstr "Wiedergabelisten am Gerät erstellen"
+msgstr "Wiedergabelisten auf dem Gerät erstellen"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:31
 msgid "Playlists Folder:"
@@ -2201,7 +2201,7 @@ msgstr "Ordner für Wiedergabelisten:"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:32
 msgid "Remove episodes deleted on device from gPodder"
-msgstr "Am Gerät gelöschte Episoden in gPodder entfernen"
+msgstr "Am Gerät gelöschte Episoden auch in gPodder entfernen"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:33
 msgid "Only sync unplayed episodes"
