--- a/po/ru.po
+++ b/po/ru.po
@@ -319,7 +319,7 @@ msgstr "MP3 плеер открыт"
 #, python-format
 msgid ""
 "Not enough space in %(path)s: %(free)s available, but need at least %(need)s"
-msgstr "Недостаточно свободного места в %(path)s: %(free)s доступно, но нужно как минимум %(need)s""
+msgstr "Недостаточно свободного места в %(path)s: %(free)s доступно, но нужно как минимум %(need)s"
 
 #: src/gpodder/sync.py:626 src/gpodder/sync.py:634
 #, python-format
@@ -1464,7 +1464,7 @@ msgstr "Удалить из gPodder"
 #: src/gpodder/gtkui/desktop/preferences.py:118
 #, fuzzy, python-format
 msgid "Custom (%(format_ids)s)"
-msgstr "Выражение (%(format_ids)s)""
+msgstr "Выражение (%(format_ids)s)"
 
 #: src/gpodder/gtkui/desktop/preferences.py:321
 msgid "Name"
@@ -1724,7 +1724,7 @@ msgstr "Выход"
 
 #: share/gpodder/extensions/rockbox_coverart.py:18
 msgid "Rockbox Cover Art Sync"
-msgstr ""Синхронизировать обложку Rockbox
+msgstr "Синхронизировать обложку Rockbox"
 
 #: share/gpodder/extensions/rockbox_coverart.py:19
 msgid "Copy Cover Art To Rockboxed Media Player"
@@ -2365,7 +2365,7 @@ msgstr "Успешно добавлено %s."
 
 #: bin/gpo:387
 msgid "This configuration option does not exist."
-msgstr ""nf jgwbz yfcnhjqrb yt ceotcndetn/"
+msgstr "Эта опция настроек не существует."
 
 #: bin/gpo:391
 msgid "Can only set leaf configuration nodes."
@@ -2478,7 +2478,7 @@ msgstr "Изменена ссылка с %(old_url)s на %(new_url)s."
 #: bin/gpo:843
 #, python-format
 msgid "%(title)s: %(msg)s ([yes]/no): "
-msgstr "%(title)s: %(msg)s ([да]/нет): ""
+msgstr "%(title)s: %(msg)s ([да]/нет): "
 
 #: bin/gpo:847
 msgid "yes"
@@ -2487,7 +2487,7 @@ msgstr "да"
 #: bin/gpo:885
 #, fuzzy, python-format
 msgid "Deleting episode: %(episode)s"
-msgstr "Удаление эпизода: %(episode)s""
+msgstr "Удаление эпизода: %(episode)s"
 
 #: bin/gpo:918
 msgid ""
@@ -2500,12 +2500,12 @@ msgstr ""
 #: bin/gpo:950
 #, fuzzy, python-format
 msgid "Will delete %(episode)s"
-msgstr "Будет удалено %(episode)s""
+msgstr "Будет удалено %(episode)s"
 
 #: bin/gpo:952
 #, fuzzy, python-format
 msgid "Won't delete %(episode)s"
-msgstr "Не будет удалено %(episode)s""
+msgstr "Не будет удалено %(episode)s"
 
 #: bin/gpo:965
 #, fuzzy, python-format
