update fr translation

--- a/po/fr.po
+++ b/po/fr.po
@@ -854,14 +854,12 @@ msgid "Updating %(podcast)s (%(position)d/%(total)d)"
 msgstr "Mise à jour de %(podcast)s (%(position)d/%(total)d)"
 
 #: src/gpodder/gtkui/main.py:2579
-#, fuzzy, python-format
 msgid "Error while updating %(title)s at %(url)s: %(message)s"
-msgstr "Erreur pendant la mise à jour %(url)s : %(message)s"
+msgstr "Erreur pendant la mise à jour de %(title)s %(url)s : %(message)s"
 
 #: src/gpodder/gtkui/main.py:2581
-#, fuzzy, python-format
 msgid "The %(title)s feed at %(url)s could not be updated."
-msgstr "Le flux de %(url)s n'a pas pu être mis à jour."
+msgstr "Le flux %(title)s à l'adresse %(url)s n'a pas pu être mis à jour."
 
 #: src/gpodder/gtkui/main.py:2582
 msgid "Error while updating feed"
