--- a/po/de.po
+++ b/po/de.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: gPodder\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-06-09 16:07+0200\n"
-"PO-Revision-Date: 2018-12-29 21:36+0100\n"
+"PO-Revision-Date: 2019-06-10 11:06+0200\n"
 "Last-Translator: TZocker\n"
 "Language-Team: German (http://www.transifex.com/projects/p/gpodder/language/"
 "de/)\n"
@@ -18,7 +18,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.2\n"
+"X-Generator: Poedit 2.2.3\n"
 
 #: src/gpodder/config.py:54
 #, python-format
@@ -846,14 +846,14 @@ msgid "Updating %(podcast)s (%(position)d/%(total)d)"
 msgstr "Aktualisiert %(podcast)s (%(position)d/%(total)d)"
 
 #: src/gpodder/gtkui/main.py:2579
-#, fuzzy, python-format
+#, python-format
 msgid "Error while updating %(title)s at %(url)s: %(message)s"
-msgstr "Fehler beim Aktualisieren von %(url)s: %(message)s"
+msgstr "Fehler beim Aktualisieren von %(title)s bei %(url)s: %(message)s"
 
 #: src/gpodder/gtkui/main.py:2581
-#, fuzzy, python-format
+#, python-format
 msgid "The %(title)s feed at %(url)s could not be updated."
-msgstr "Der Feed unter %(url)s konnte nicht aktualisiert werden."
+msgstr "Der Feed %(title)s unter %(url)s konnte nicht aktualisiert werden."
 
 #: src/gpodder/gtkui/main.py:2582
 msgid "Error while updating feed"
