--- a/po/fr.po
+++ b/po/fr.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: gPodder\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-09-10 21:18+0200\n"
-"PO-Revision-Date: 2018-12-27 16:28+0100\n"
+"PO-Revision-Date: 2019-09-10 21:21+0200\n"
 "Last-Translator: Eric Le Lay <elelay@macports.org>\n"
 "Language-Team: French (http://www.transifex.com/projects/p/gpodder/language/"
 "fr/)\n"
@@ -19,7 +19,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
-"X-Generator: Poedit 2.2\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #: src/gpodder/config.py:54
 #, python-format
@@ -1860,17 +1860,15 @@ msgid "Transcode audio files to mp3/ogg"
 msgstr "Conversion des fichiers audio en mp3 ou ogg"
 
 #: share/gpodder/extensions/episode_website_context_menu.py:15
-#, fuzzy
 msgid "\"Open website\" episode and podcast context menu"
 msgstr "Menu contextuel \"Ouvrir le site\""
 
 #: share/gpodder/extensions/episode_website_context_menu.py:16
-#, fuzzy
 msgid ""
 "Add a context menu item for opening the website of an episode or podcast"
 msgstr ""
-"Ajoute un menu contextuel pour ouvrir le site de l'épisode dans un "
-"navigateur Internet externe"
+"Ajoute un menu contextuel pour ouvrir le site de l'épisode ou du podcast "
+"dans un navigateur Internet externe"
 
 #: share/gpodder/extensions/episode_website_context_menu.py:34
 #: share/gpodder/extensions/episode_website_context_menu.py:37
