translate youtube-dl extension

--- a/po/fr.po
+++ b/po/fr.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gPodder\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-09-10 21:18+0200\n"
+"POT-Creation-Date: 2019-09-10 21:26+0200\n"
 "PO-Revision-Date: 2019-09-10 21:21+0200\n"
 "Last-Translator: Eric Le Lay <elelay@macports.org>\n"
 "Language-Team: French (http://www.transifex.com/projects/p/gpodder/language/"
@@ -1710,6 +1710,10 @@ msgid "Run a predefined external command upon download completion."
 msgstr ""
 "Exécuter une commande externe prédéfinie lorsque le téléchargement est "
 "terminé."
+
+#: share/gpodder/extensions/youtube-dl.py:26
+msgid "Manage Youtube subscriptions using youtube-dl (pip install youtube_dl)"
+msgstr "Utilise youtube-dl (pip install youtube_dl) pour gérer les podcasts Youtube"
 
 #: share/gpodder/extensions/video_converter.py:20
 msgid "Convert video files"
