--- a/po/de.po
+++ b/po/de.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: gPodder\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-09-10 21:26+0200\n"
-"PO-Revision-Date: 2019-06-10 11:06+0200\n"
+"PO-Revision-Date: 2019-09-10 22:24+0200\n"
 "Last-Translator: TZocker\n"
 "Language-Team: German (http://www.transifex.com/projects/p/gpodder/language/"
 "de/)\n"
@@ -18,7 +18,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.2.3\n"
+"X-Generator: Poedit 2.2\n"
 
 #: src/gpodder/config.py:54
 #, python-format
@@ -1700,11 +1700,11 @@ msgstr "Einen Befehl nach dem Download ausführen"
 msgid "Run a predefined external command upon download completion."
 msgstr ""
 "Führen Sie nach Abschluss des Downloads einen vordefinierten externen Befehl "
-"aus"
+"aus."
 
 #: share/gpodder/extensions/youtube-dl.py:26
 msgid "Manage Youtube subscriptions using youtube-dl (pip install youtube_dl)"
-msgstr ""
+msgstr "Verwaltung von Youtube Abos mit youtube-dl (pip install youtube_dl)"
 
 #: share/gpodder/extensions/video_converter.py:20
 msgid "Convert video files"
@@ -1853,16 +1853,15 @@ msgid "Transcode audio files to mp3/ogg"
 msgstr "Audio-Dateien in mp3/ogg umwandeln"
 
 #: share/gpodder/extensions/episode_website_context_menu.py:15
-#, fuzzy
 msgid "\"Open website\" episode and podcast context menu"
-msgstr "\"Webseite öffnen\" im Kontext-Menü"
+msgstr "\"Webseite öffnen\" im Episode und Podcast Kontext-Menü"
 
 #: share/gpodder/extensions/episode_website_context_menu.py:16
-#, fuzzy
 msgid ""
 "Add a context menu item for opening the website of an episode or podcast"
 msgstr ""
-"Fügt einen Eintrag ins Kontext-Menü für das Öffnen der Episoden-Webseite ein"
+"Fügt ein Kontextmenüelement zum Öffnen der Website von einer Episode oder "
+"eines Podcasts hinzu"
 
 #: share/gpodder/extensions/episode_website_context_menu.py:34
 #: share/gpodder/extensions/episode_website_context_menu.py:37
