--- a/po/pl.po
+++ b/po/pl.po
@@ -10,16 +10,16 @@ msgstr ""
 "Project-Id-Version: gPodder\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-09-10 21:26+0200\n"
-"PO-Revision-Date: 2019-05-30 12:04+0200\n"
+"PO-Revision-Date: 2019-09-11 14:42+0200\n"
 "Last-Translator: Karol Bieńkowski <karolbienkowski@protonmail.com>\n"
 "Language-Team: Polish <>\n"
 "Language: pl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
-"|| n%100>=20) ? 1 : 2);\n"
-"X-Generator: Lokalize 19.04.1\n"
+"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10"
+" || n%100>=20) ? 1 : 2);\n"
+"X-Generator: Lokalize 19.08.0\n"
 
 #: src/gpodder/config.py:54
 #, python-format
@@ -1710,6 +1710,8 @@ msgstr ""
 #: share/gpodder/extensions/youtube-dl.py:26
 msgid "Manage Youtube subscriptions using youtube-dl (pip install youtube_dl)"
 msgstr ""
+"Zarządzaj subskrypcjami na YouTube przy pomocy youtube-dl (pip install"
+" youtube_dl)"
 
 #: share/gpodder/extensions/video_converter.py:20
 msgid "Convert video files"
@@ -1857,16 +1859,15 @@ msgid "Transcode audio files to mp3/ogg"
 msgstr "Transkoduj pliki audio do mp3/ogg"
 
 #: share/gpodder/extensions/episode_website_context_menu.py:15
-#, fuzzy
 msgid "\"Open website\" episode and podcast context menu"
-msgstr "\"Przejdź do witryny\" w menu kontekstowym odcinka"
+msgstr "\"Przejdź do witryny\" w menu kontekstowym odcinka i podcastu"
 
 #: share/gpodder/extensions/episode_website_context_menu.py:16
-#, fuzzy
 msgid ""
 "Add a context menu item for opening the website of an episode or podcast"
 msgstr ""
-"Dodaj element menu kontekstowego do przejścia do strony internetowej odcinka"
+"Dodaj element menu kontekstowego do otwierania strony internetowej odcinka"
+" lub podcastu"
 
 #: share/gpodder/extensions/episode_website_context_menu.py:34
 #: share/gpodder/extensions/episode_website_context_menu.py:37
