fix #720 warning: internationalized messages should not contain the '\r' escape sequence

--- a/po/hu.po
+++ b/po/hu.po
@@ -1026,15 +1026,11 @@ msgid "Please wait while the podcast is deleted"
 msgstr "Várjon a podcast törlésére"
 
 #: src/gpodder/gtkui/main.py:3148
-#, fuzzy
-#| msgid ""
-#| "This podcast and all its episodes will be PERMANENTLY DELETED.\r\n"
-#| "Are you sure you want to continue?"
 msgid ""
 "This podcast and all its episodes will be PERMANENTLY DELETED.\n"
 "Are you sure you want to continue?"
 msgstr ""
-"A podcast és az összes epizódja VÉGLEGESEN TÖRÖLVE LESZ.\r\n"
+"A podcast és az összes epizódja VÉGLEGESEN TÖRÖLVE LESZ.\n"
 "Biztos folytatja?"
 
 #: src/gpodder/gtkui/main.py:3150
@@ -1046,15 +1042,11 @@ msgid "Please wait while the podcasts are deleted"
 msgstr "Várjon a podcastok törlésére"
 
 #: src/gpodder/gtkui/main.py:3152
-#, fuzzy
-#| msgid ""
-#| "These podcasts and all their episodes will be PERMANENTLY DELETED.\r\n"
-#| "Are you sure you want to continue?"
 msgid ""
 "These podcasts and all their episodes will be PERMANENTLY DELETED.\n"
 "Are you sure you want to continue?"
 msgstr ""
-"A podcastok és az összes epizódjuk VÉGLEGESEN TÖRÖLVE LESZNEK.\r\n"
+"A podcastok és az összes epizódjuk VÉGLEGESEN TÖRÖLVE LESZNEK.\n"
 "Biztos folytatja?"
 
 #: src/gpodder/gtkui/main.py:3212
