--- a/po/nn.po
+++ b/po/nn.po
@@ -1036,15 +1036,11 @@ msgid "Please wait while the podcast is deleted"
 msgstr "Vent mens podkasten vert sletta"
 
 #: src/gpodder/gtkui/main.py:3148
-#, fuzzy
-#| msgid ""
-#| "This podcast and all its episodes will be PERMANENTLY DELETED.\r\n"
-#| "Are you sure you want to continue?"
 msgid ""
 "This podcast and all its episodes will be PERMANENTLY DELETED.\n"
 "Are you sure you want to continue?"
 msgstr ""
-"Podkasten og alle tilhøyrande episodar vert SLETTA FOR ALLTID.\r\n"
+"Podkasten og alle tilhøyrande episodar vert SLETTA FOR ALLTID.\n"
 "Er du sikker på at du vil halda fram?"
 
 #: src/gpodder/gtkui/main.py:3150
@@ -1056,15 +1052,11 @@ msgid "Please wait while the podcasts are deleted"
 msgstr "Vent mens podkastane vert sletta"
 
 #: src/gpodder/gtkui/main.py:3152
-#, fuzzy
-#| msgid ""
-#| "These podcasts and all their episodes will be PERMANENTLY DELETED.\r\n"
-#| "Are you sure you want to continue?"
 msgid ""
 "These podcasts and all their episodes will be PERMANENTLY DELETED.\n"
 "Are you sure you want to continue?"
 msgstr ""
-"Podkastane og alle tilhøyrande episodar vert SLETTA FOR ALLTID.\r\n"
+"Podkastane og alle tilhøyrande episodar vert SLETTA FOR ALLTID.\n"
 "Er du sikker på at du vil halda fram?"
 
 #: src/gpodder/gtkui/main.py:3212
