--- a/po/pl.po
+++ b/po/pl.po
@@ -1046,15 +1046,11 @@ msgid "Please wait while the podcast is deleted"
 msgstr "Proszę czekać, podcast jest usuwany"
 
 #: src/gpodder/gtkui/main.py:3148
-#, fuzzy
-#| msgid ""
-#| "This podcast and all its episodes will be PERMANENTLY DELETED.\r\n"
-#| "Are you sure you want to continue?"
 msgid ""
 "This podcast and all its episodes will be PERMANENTLY DELETED.\n"
 "Are you sure you want to continue?"
 msgstr ""
-"Ten podcast i wszystkie jego odcinki zostaną TRWALE USUNIĘTE.\r\n"
+"Ten podcast i wszystkie jego odcinki zostaną TRWALE USUNIĘTE.\n"
 "Czy chcesz kontynuować?"
 
 #: src/gpodder/gtkui/main.py:3150
@@ -1066,15 +1062,11 @@ msgid "Please wait while the podcasts are deleted"
 msgstr "Proszę czekać, podcasty są usuwane"
 
 #: src/gpodder/gtkui/main.py:3152
-#, fuzzy
-#| msgid ""
-#| "These podcasts and all their episodes will be PERMANENTLY DELETED.\r\n"
-#| "Are you sure you want to continue?"
 msgid ""
 "These podcasts and all their episodes will be PERMANENTLY DELETED.\n"
 "Are you sure you want to continue?"
 msgstr ""
-"Te podcasty i wszystkie ich odcinki zostaną TRWALE USUNIĘTE.\r\n"
+"Te podcasty i wszystkie ich odcinki zostaną TRWALE USUNIĘTE.\n"
 "Czy chcesz kontynuować?"
 
 #: src/gpodder/gtkui/main.py:3212
