--- a/po/ru.po
+++ b/po/ru.po
@@ -1046,15 +1046,11 @@ msgid "Please wait while the podcast is deleted"
 msgstr "Пожалуйста, дождитесь удаления подкаста"
 
 #: src/gpodder/gtkui/main.py:3148
-#, fuzzy
-#| msgid ""
-#| "This podcast and all its episodes will be PERMANENTLY DELETED.\r\n"
-#| "Are you sure you want to continue?"
 msgid ""
 "This podcast and all its episodes will be PERMANENTLY DELETED.\n"
 "Are you sure you want to continue?"
 msgstr ""
-"Этот подкаст и все его эпизоды будут БЕЗВОЗВРАТНО УДАЛЕНЫ.\r\n"
+"Этот подкаст и все его эпизоды будут БЕЗВОЗВРАТНО УДАЛЕНЫ.\n"
 "Вы уверены, что хотите продолжить?"
 
 #: src/gpodder/gtkui/main.py:3150
@@ -1067,14 +1063,11 @@ msgstr "Пожалуйста, дождитесь удаления подкаст
 
 #: src/gpodder/gtkui/main.py:3152
 #, fuzzy
-#| msgid ""
-#| "These podcasts and all their episodes will be PERMANENTLY DELETED.\r\n"
-#| "Are you sure you want to continue?"
 msgid ""
 "These podcasts and all their episodes will be PERMANENTLY DELETED.\n"
 "Are you sure you want to continue?"
 msgstr ""
-"Эти подкасты и все их эпизоды будут БЕЗВОЗВРАТНО УДАЛЕНЫ.\r\n"
+"Эти подкасты и все их эпизоды будут БЕЗВОЗВРАТНО УДАЛЕНЫ.\n"
 "Вы уверены, что хотите продолжить?"
 
 #: src/gpodder/gtkui/main.py:3212
