--- a/po/he.po
+++ b/po/he.po
@@ -73,7 +73,7 @@ msgstr "פרק"
 
 #: src/gpodder/syncui.py:275
 msgid "Episodes have been deleted on device"
-msgstr ""
+msgstr "הפרקים נמחקו מהמכשיר"
 
 #: src/gpodder/syncui.py:287
 #, fuzzy
@@ -236,11 +236,11 @@ msgstr "לא ידוע"
 
 #: src/gpodder/model.py:773
 msgid "Default"
-msgstr ""
+msgstr "ברירת מחדל"
 
 #: src/gpodder/model.py:774
 msgid "Only keep latest"
-msgstr ""
+msgstr "שמור רק את האחרון"
 
 #: src/gpodder/model.py:808 src/gpodder/model.py:1219
 #: src/gpodder/extensions.py:59
@@ -645,11 +645,11 @@ msgstr "השהה"
 
 #: src/gpodder/gtkui/main.py:1644
 msgid "Move up"
-msgstr ""
+msgstr "העלה למעלה"
 
 #: src/gpodder/gtkui/main.py:1646
 msgid "Move down"
-msgstr ""
+msgstr "הורד למטה"
 
 #: src/gpodder/gtkui/main.py:1649
 msgid "Remove from list"
@@ -682,7 +682,7 @@ msgstr "הגדרות פודקסט"
 
 #: src/gpodder/gtkui/main.py:1772
 msgid "File already exist"
-msgstr ""
+msgstr "הקובץ כבר קיים"
 
 #: src/gpodder/gtkui/main.py:1774
 #, python-format
@@ -2425,7 +2425,7 @@ msgstr ""
 
 #: bin/gpo:849
 msgid "yes"
-msgstr ""
+msgstr "כן"
 
 #: bin/gpo:887
 #, fuzzy, python-format
