--- a/po/he.po
+++ b/po/he.po
@@ -421,7 +421,7 @@ msgstr "אתר:"
 
 #: src/gpodder/gtkui/app.py:166
 msgid "Bug Tracker"
-msgstr ""
+msgstr "מעקב באגים"
 
 #: src/gpodder/gtkui/app.py:217
 msgid "Path to gPodder home is too long"
@@ -694,7 +694,7 @@ msgstr ""
 msgid ""
 "Error saving to local folder: %(error)r.\n"
 "Would you like to continue?"
-msgstr ""
+msgstr "האם אתה רוצה להמשיך?"
 
 #: src/gpodder/gtkui/main.py:1818 src/gpodder/gtkui/main.py:1823
 #, fuzzy
@@ -836,7 +836,7 @@ msgstr "מבטל..."
 
 #: src/gpodder/gtkui/main.py:2572
 msgid "Please connect to a network, then try again."
-msgstr ""
+msgstr "אנא להתחבר לרשת, ולאחר מכן נסה שוב."
 
 #: src/gpodder/gtkui/main.py:2573
 #, fuzzy
@@ -1120,7 +1120,7 @@ msgstr "לא יכול להוסיף מספר פודקסטים"
 
 #: src/gpodder/gtkui/main.py:3343
 msgid "Please try again later."
-msgstr ""
+msgstr "בבקשה נסה שוב מאוחר יותר."
 
 #: src/gpodder/gtkui/main.py:3348
 msgid "No updates available"
