--- a/po/he.po
+++ b/po/he.po
@@ -694,7 +694,8 @@ msgstr ""
 msgid ""
 "Error saving to local folder: %(error)r.\n"
 "Would you like to continue?"
-msgstr "האם אתה רוצה להמשיך?"
+msgstr "שגיאה בשמירה בתיקיה המקומית: %(error)r.\n"
+"האם אתה רוצה להמשיך?"
 
 #: src/gpodder/gtkui/main.py:1818 src/gpodder/gtkui/main.py:1823
 #, fuzzy
