--- a/po/nn.po
+++ b/po/nn.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gPodder\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-04-04 14:42+0200\n"
+"POT-Creation-Date: 2020-04-14 16:54+0200\n"
 "PO-Revision-Date: 2020-04-04 14:54+0200\n"
 "Last-Translator: Karl Ove Hufthammer <karl@huftis.org>\n"
 "Language-Team: Norwegian Nynorsk <l10n-no@lister.huftis.org>\n"
@@ -1402,7 +1402,8 @@ msgstr "storleik: %s"
 #: src/gpodder/gtkui/desktop/exportlocal.py:57
 #, python-format
 msgid "Export remaining %(count)d episode to this folder with its default name"
-msgid_plural "Export remaining %(count)d episodes to this folder with their default name"
+msgid_plural ""
+"Export remaining %(count)d episodes to this folder with their default name"
 msgstr[0] ""
 "Eksporter gjenståande %(count)d episode til denne mappa, med standardnamn"
 msgstr[1] ""
@@ -1713,8 +1714,8 @@ msgid ""
 msgstr ""
 "Kryss av for «Blokker episodar» og la tekst­feltet stå tomt for å slå av "
 "automatisk nedlasting av episodar. Teksten i feltet vert brukt til å søkja "
-"etter (delar av) episode­titlar, så tom tekst søkjer etter alle titlane. "
-"Bruk unntaks­mønsteret til å fjerna episode­blokkering. (Blokker først alle "
+"etter (delar av) episode­titlar, så tom tekst søkjer etter alle titlane. Bruk "
+"unntaks­mønsteret til å fjerna episode­blokkering. (Blokker først alle "
 "episodane og så avblokker nokre av dei)."
 
 #: share/gpodder/extensions/filter.py:164
